mylaptop/ingress_path_routing2/app-example.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-ui
  template:
    metadata:
      labels:
        app: app-ui
    spec:
      containers:
        - name: nginx
          image: nginx:alpine
---
apiVersion: v1
kind: Service
metadata:
  name: app-service
spec:
  selector:
    app: app-ui
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
