mylaptop/ingress_path_routing2/ingress-path.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-path-routing
  annotations:
    # This rewrite ensures that if a user hits /app/home,
    # the backend service receives just /home
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - host: example.minikube.local
      http:
        paths:
          - path: /app(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: app-service
                port:
                  number: 80
          - path: /api(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: api-service
                port:
                  number: 80
